<resources>
    <string name="app_name">FC</string>

    <string name="title_home">Thống kê</string>

    <string name="title_dashboard">Danh sách</string>

    <string name="title_notifications">Thông tin</string>
    <!--Files are using: fragment_budget.xml, -->
    <string name="title_budget">Ngân sách</string>

    <string name="sub_heading_page_choose">Dù bạn là một cá nhân muốn kiểm soát tài chính cá nhân hay là một doanh nghiệp đang tìm kiếm giải pháp tối ưu hóa, ứng dụng luôn sẵn sàng có tất cả những gì bạn cần để thực hiện điều đó</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Files are using: fragment_budget.xml, -->
    <string name="statistics">Thống kê ngân sách</string>
    <string name="thuNo">Quản lý nợ và trả nợ</string>
    <string name="financial_goals">Mục Tiêu Tài Chính</string>

    <!--Files are using: fragment_budget.xml, -->
    <string name="Advance_payment_and_reimbursement">Tạm ứng/hoàn ứng</string>


    <string name="logout">Logout</string>
    <string name="i_vai_tr">Đổi vai trò</string>

    <string name="welcome">Welcome!</string>


    <!--Files are using: business_activity_info.xml, -->
    <string name="hoten">Họ và tên</string>
    <string name="thong_tin_doanh_nghiep">Thông tin doanh nghiệp</string>
    <string name="nhaphoten">Nhập họ và tên</string>
    <string name="lienhe">Liên hệ</string>
    <string name="nhap_lien_he">Nhập liên hệ</string>
    <string name="loai_hinh_kinh_doanh">Loại hình kinh doanh</string>
    <string name="ten_doanh_nghiep">Tên doanh nghiệp</string>
    <string name="nhap_ten_doanh_nghiep">Nhập tên doanh nghiệp</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="xac_nhan">Xác nhận</string>

    <!--Files are using: fragment_login.xml, -->
    <string name="nhap_email_ten_nguoi_dung">Nhập email tên người dùng</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="Dang_nhap">Đăng nhập</string>
    <string name="Dang_nhap_qua_google">Đăng nhập qua Google</string>
    <string name="nhap_mat_khau">"   Nhập mật khẩu"</string>
    <string name="hay">Hay</string>
    <string name="Dang_nhap_qua_facebook">Đăng nhập qua Facebook</string>
    <string name="tao_tai_khoan">Tạo tài khoản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="cau_gioi_thieu">Quản lý tài chính chưa bao giờ là dễ đến thế</string>
    <string name="finecoin">FineCoin</string>

    <!--Files are using: business_button_storage.xml, -->
    <string name="SoSanPham">Số sản phẩm</string>
    <string name="SoLuongTon">Số lượng tồn</string>
    <string name="GiaTriTon">Giá trị tồn</string>
    <string name="demo_0">0</string>

    <!-- Các string khác -->
        <string-array name="business_types">
            <item>Cửa hàng</item>
            <item>Nhà hàng</item>
            <item>Dịch vụ</item>
            <item>Khác</item>
        </string-array>

        <string-array name="month_array">
            <item>January</item>
            <item>February</item>
            <item>March</item>
            <item>April</item>
            <item>May</item>
            <item>June</item>
            <item>July</item>
            <item>August</item>
            <item>September</item>
            <item>October</item>
            <item>November</item>
            <item>December</item>
        </string-array>

    <string name="channel_name">Notifications</string>
    <string name="channel_description">App notification</string>

</resources>