<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/business_shape_button"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:padding="8dp"
            android:paddingBottom="16dp"
            android:text="@string/thong_tin_doanh_nghiep"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <!-- Họ và tên -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoten"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZàáâãèéêìíòóôõùúýỳĂÂÊÔƠƯăêôưÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚÝỲĐđ "
            android:hint="@string/nhaphoten"
            android:inputType="text"
            android:paddingVertical="12dp" />

        <!-- Liên hệ -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lienhe"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:hint="@string/nhap_lien_he"
            android:inputType="text"
            android:paddingVertical="12dp" />

        <!-- Loại hình kinh doanh -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loai_hinh_kinh_doanh"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/business_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:paddingVertical="15dp" />

        <!-- Tên doanh nghiệp -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_doanh_nghiep"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZàáâãèéêìíòóôõùúýỳĂÂÊÔƠƯăêôưÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚÝỲĐđ "
            android:hint="@string/nhap_ten_doanh_nghiep"
            android:inputType="text"
            android:paddingVertical="12dp" />

        <!-- Địa chỉ -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_chi"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="postalAddress"
            android:backgroundTint="@color/black"
            android:hint="@string/nhap_dia_chi"
            android:inputType="text"
            android:paddingVertical="12dp" />

        <!-- Nút Xác nhận -->
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/purple_500"
            android:text="@string/xac_nhan"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/existing_company_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đã có công ty" />
    </LinearLayout>

</ScrollView>
