<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="10"
    android:background="@drawable/business_background_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/business_shape_green">

            <TextView
                android:id="@+id/lb_storage_slpham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="3dp"
                android:text="@string/SoSanPham"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_storage_slpham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:text="@string/demo_0"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/business_shape_red">

            <TextView
                android:id="@+id/lb_storage_slton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="3dp"
                android:text="@string/SoLuongTon"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_storage_slton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:text="@string/demo_0"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/business_shape_blue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lb_storgae_gtton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="6dp"
                android:text="@string/GiaTriTon"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_storage_gtton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:text="@string/demo_0"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginTop="10dp">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_storage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="16dp"
        android:clipChildren="true"
        android:gravity="end">

<!--        <ImageButton-->
<!--            android:id="@+id/fragment_button"-->
<!--            android:layout_width="83dp"-->
<!--            android:layout_height="38dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="0dp"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:src="@drawable/business_ic_edit"-->
<!--            android:visibility="gone" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/edit_button"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:src="@drawable/business_ic_edit"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:visibility="gone"/>-->

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/business_ic_search"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/business_ic_add"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
